--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
 </head>
+<style>
+    body {
+        background-color: rgb(195, 208, 240);
+    }
+    .container {
+        text-align: center; 
+        margin-top: 200px;       
+    }    
+</style>
 <body>
-    <H1>WELCOME...</H1>
+    <div class="container">
+        <H2>Welcome to the GitHub page of ramkishore417</H2>        
+        <H2>The static page hosting on this GitHub is now up and running successfully.</H2>       
+        To view the Repository <a href="https://github.com/ramkishore417/ramkishore417.github.io">click here</a>
+    </div>        
 </body>
 </html>
