--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <H2>Welcome to the GitHub page of ramkishore417</H2>        
-        <H2>The static page hosting on this GitHub is now up and running successfully.</H2>       
+        <H2>The static page hosting on this GitHub account is now up and running successfully.</H2>       
         To view the Repository <a href="https://github.com/ramkishore417/ramkishore417.github.io">click here</a>
     </div>        
 </body>
